🔀 Fix vertical sidebar in fullscreen (#197)
Fixes extra space above the window on windows

--- a/src/browser/themes/pulse/vertical_tabs.css
+++ b/src/browser/themes/pulse/vertical_tabs.css
@@ -9,6 +9,10 @@
   display: none;
 }
 
+#navigator-toolbox-background[verticaltabs='true'] #titlebar {
+    display: none;
+}
+
 #browser #TabsToolbar {
   background-color: -moz-Dialog;
   max-width: 350px;
@@ -93,4 +97,8 @@
   max-width: calc(
     16px + 2 * var(--inline-tab-padding) + 2 * var(--tab-block-margin)
   );
+}
+
+:root[sizemode='fullscreen'] #browser #TabsToolbar {
+    display: none;
 }
